--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
         {{message}}
     </div>
     <div id='OutroController'>
-        {{message}}
+        {{message}}    
+        
+        <button v-on:click="clique()">Clique</button>
     </div>
 </body>
 </html>
